# FractalTrainer

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  PAPER_DRAFT.md  README.md  pyproject.toml
Reviews/: 01_sprint1_observer.md  02_sprint2_comparator.md  03_sprint3_closed_loop.md  04_v2_sprint1_self_mod_observer.md  05_v2_sprint2_science_question.md  06_v2_sprint3_golden_run_matching.md  07_v2_sprint4_end_to_end_golden_loop.md  08_v2_sprint5_opaque_golden_ablation.md  09_v2_sprint6_multi_run_meta_trajectory.md  10_v2_sprint7_meta_correlation_dim.md  11_v2_sprint8_utility_test.md  12_v3_sprint3_fractal_registry_mvp.md  13_v3_sprint4_growth_trigger.md  14_v3_sprint5_composition_utility.md  15_v3_sprint6_adaptive_thresholds.md  16_v3_sprint7_scale_stress.md  17_v3_sprint7_jaccard_supplement.md  18_v3_sprint8_hierarchical_routing.md  19_v3_sprint9_coverage_compose.md  20_v3_sprint9b_compose_vs_spawn.md  21_v3_sprint9c_coverage_mechanism.md  22_v3_sprint9d_routing_rules.md  23_v3_sprint10_curated_registry.md  24_v3_sprint10b_curated_ood.md  25_v3_sprint11_multi_region.md  26_v3_sprint12_learned_anchors.md  27_v3_sprint13_snake_teacher.md  28_v3_sprint14_direct_strategies.md  29_v3_sprint15a_closed_loop_local.md  30_v3_sprint15b_claude_vs_qwen.md  31_v3_sprint15c_data_describer.md  32_v3_sprint16_closing_the_qwen_gap.md  33_v3_sprint17_fractal_demo.md  34_v3_sprint17_starved_and_latent.md  35_v3_sprint17_fashion_and_qwen.md  36_v3_sprint17_data_starved.md  37_v3_sprint17_cifar_gap_rule.md  38_v3_sprint17_gap_rule_formula.md  39_v3_sprint17_self_spawning.md  40_v3_sprint17_self_spawn_fix_hierarchical.md  (+10 more)
configs/: experiment.yaml  hparams.yaml  (+6 more)
(+261 files in other folders)
